<resources>
    <string name="app_name">Iris - Morning Assistant</string>
    <string name="weather">This is the page for the weather.</string>
    <string name="weatherButton">Weather</string>
    <string name="calendarButton">Calendar</string>
    <string name="alarmButton">Alarm</string>
    <string name="calendar">This is the page for the calendar.</string>
    <string name="newCalEvent">This is the page for creating a new calendar event.</string>
    <string name="alarm">This is the page for the alarm.</string>
    <string name="newAlarm">This is the page for creating a new alarm.</string>
    <string name="menu_settings">Settings</string>
    <string name="Button">Button</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to Settings -->

    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tues">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thur">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="action_settings">Settings</string>

    <string-array name="whale_array">
        <item>Pick alarm sound!</item>
        <item>Humpback bubble net</item>
        <item>Humpback contact Call Moo</item>
        <item>Humpback contact Call Whup</item>
        <item>Humpback feeding Call</item>
        <item>Humpback flipper splash</item>
        <item>Humpback Tail slaps</item>
        <item>Humpback whale song</item>
        <item>Humpback whale song with outboard engine</item>
        <item>Humpback wheeze blows</item>
        <item>echolocation</item>
        <item>Killer whale offshore</item>
        <item>Killer whale resident</item>
        <item>Killer whale transient</item>
    </string-array>

</resources>
