<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/PopUpView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">
        <CheckBox
            android:id="@+id/sun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sun" />
        <CheckBox
            android:id="@+id/mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon"/>
        <CheckBox
            android:id="@+id/tues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tues"/>
        <CheckBox
            android:id="@+id/wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wed"/>
        <CheckBox
            android:id="@+id/thur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thur"/>
        <CheckBox
            android:id="@+id/fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fri"/>
        <CheckBox
            android:id="@+id/sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sat"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dismissPopup"/>
    </LinearLayout>