<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nolanmeeks.iris_morningassistant.AlarmActivity"
    tools:showIn="@layout/activity_alarm">

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker" />

    <CheckBox
        android:id="@+id/sun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sun"/>
    <CheckBox
        android:id="@+id/mon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mon"/>
    <CheckBox
        android:id="@+id/tues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tues"/>
    <CheckBox
        android:id="@+id/wed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wed"/>
    <CheckBox
        android:id="@+id/thur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thur"/>
    <CheckBox
        android:id="@+id/fri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fri"/>
    <CheckBox
        android:id="@+id/sat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sat"/>
    <Button
        android:id="@+id/CRUD_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="Update Alarm"/>
    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deleteAlarm"
        android:background="@color/colorPrimaryDark"
        android:text="Delete Alarm"/>
</LinearLayout>
