<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.nolanmeeks.iris_morningassistant.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_cloud_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.nolanmeeks.iris_morningassistant.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_access_alarm_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.nolanmeeks.iris_morningassistant.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
