<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:id="@+id/main_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/coordinatorLayout">
            <Button
                android:id="@+id/WeatherButton"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="top"
                android:text="@string/weatherButton"
                style="?android:attr/borderlessButtonStyle"/>

        <TextView
            android:id="@+id/CalendarButton"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:text="@string/calendarButton"
            style="?android:attr/borderlessButtonStyle"/>
        <TableRow
            android:clickable="true"
            android:id="@+id/AlarmButton"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:visibility="gone"
            style="?android:attr/borderlessButtonStyle"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarmButton"
                    android:textSize="80sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarmButton"
                    android:textSize="20sp"/>
            </LinearLayout>
            <ToggleButton
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                />
            </TableRow>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_circle_outline_white_24dp"
        app:backgroundTint="@color/colorFAB" />

    <include
        android:id="@+id/include"
        layout="@layout/fab_layout" />


</android.support.design.widget.CoordinatorLayout>